k8s/simulations.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: woodgrovebank-simulations
  labels:
    orleans/serviceId: woodgrovebank
spec:
  selector:
    matchLabels:
      app: woodgrovebank-simulations
      orleans/serviceId: woodgrovebank
  template:
    metadata:
      labels:
        app: woodgrovebank-simulations
        orleans/serviceId: woodgrovebank
        orleans/clusterId: woodgrovebank
    spec:
      containers:
      - name: woodgrovebank-simulations
        image: woodgrovebank-simulations:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80
        - containerPort: 30000
        - containerPort: 11111
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
