k8s/scaler.yaml
apiVersion: v1
kind: Service
metadata:
  name: orleans-scaler
spec:
  selector:
    app: orleans-scaler
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orleans-scaler
  labels:
    orleans/serviceId: woodgrovebank
spec:
  selector:
    matchLabels:
      app: orleans-scaler
      orleans/serviceId: woodgrovebank
  template:
    metadata:
      labels:
        app: orleans-scaler
        orleans/serviceId: woodgrovebank
        orleans/clusterId: woodgrovebank
    spec:
      containers:
      - name: orleans-scaler
        image: orleans-scaler:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80
        - containerPort: 30000
        - containerPort: 11111
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
