k8s/admin.yaml
apiVersion: v1
kind: Service
metadata:
  name: woodgrovebank-admin
spec:
  selector:
    app: woodgrovebank-admin
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: woodgrovebank-admin
  labels:
    orleans/serviceId: woodgrovebank
spec:
  selector:
    matchLabels:
      app: woodgrovebank-admin
      orleans/serviceId: woodgrovebank
  template:
    metadata:
      labels:
        app: woodgrovebank-admin
        orleans/serviceId: woodgrovebank
        orleans/clusterId: woodgrovebank
    spec:
      containers:
      - name: woodgrovebank-admin
        image: woodgrovebank-admin:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80
        - containerPort: 30000
        - containerPort: 11111
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /admin
            pathType: Prefix
            backend:
              service: 
                name: woodgrovebank-admin
                port: 
                  number: 80
